c-codes/include/cosmo_bk.h

int initial_lcdm(double omegam, double omegak, double hubble);
double lcdm_hz(double z);
double lcdm_comoving_distance(double z);
double lcdm_growth(double z, double sig8, double gam);
double lcdm_como_ang_diam_distance(double z); // in Mpc
double lcdm_luminosity_distance(double z);
double lcdm_angulardiameter_distance(double z);
double lcdm_mu_SN(double z);