c-codes/include/cosmo_gp.h

#define __COSMO_GP__
int initial_cosmo_gp(int num);
int setup_cosmo_gp(double omegak, int ohdtype);